--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>SpaceHive Battle</title>
+  <title>Space Laser</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="assets/spaceship.png">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <style>
     /* Optional: Ensure canvas takes up full screen */
     body, html {
@@ -14,6 +16,7 @@
       overflow: hidden;
       width: 100%;
       height: 100%;
+      font-family: 'Orbitron', sans-serif;
     }
     canvas {
       display: block;
